# DJVU-Reader

./: .gitignore  CMakeLists.txt  README.md  djvu_reader.cpp  requirements.txt  roadmap.md
.github/workflows/: build.yml
src/: djvuview.cpp  djvuview.h  main.cpp  mainwindow.cpp  mainwindow.h  pagerenderer.cpp  pagerenderer.h
